# MagneticFluidFormAlgorithm

./: .gitignore  CMakeLists.txt  README.md
include/MagneticFluidFormAlgorithm/: AlgorithmConfigurator.h  ConfigFileReader.h  ConfigJsonFileReader.h  ConfigJsonReader.h  ConfigJsonStringReader.h  ConfigReader.h  DifferenceMethod.h  Exceptions.h  ExplicitDifferenceMethod.h  ExplicitMethodUniformConcentration.h  ImplicitDifferenceMethod.h  ImplicitMethodUniformConcentration.h  MagneticFluidFormAlgorithm.h  MathUtils.h  Utils.h
src/: AlgorithmConfigurator.cpp  ConfigFileReader.h  ConfigJsonFileReader.cpp  ConfigJsonFileReader.h  ConfigJsonReader.cpp  ConfigJsonStringReader.cpp  DifferenceMethod.cpp  Exceptions.cpp  ExplicitDifferenceMethod.cpp  ExplicitMethodUniformConcentration.cpp  Formulas.cpp  Formulas.h  ImplicitDifferenceMethod.cpp  ImplicitMethodUniformConcentration.cpp  MathUtils.cpp  RightSweep.cpp  RightSweep.h  Utils.cpp
